==> feaser/openblt/Target/Source/ARMCM33_STM32U5/can.c <==
#include "boot.h"                                /* bootloader generic header          */
#include "stm32u5xx.h"                           /* STM32 CPU and HAL header           */
#include "stm32u5xx_ll_rcc.h"                    /* STM32 LL RCC header                */
#define CAN_MSG_TX_TIMEOUT_MS          (50u)
#define CAN_CHANNEL   FDCAN1

void CanInit(void)
{
  blt_int32u          rxMsgId = BOOT_COM_CAN_RX_MSG_ID;
  FDCAN_FilterTypeDef filterConfig;
  tCanPeriphParams    periphParams;
  tCanBitTimingConfig bittimingConfig = { 0 };
#if (BOOT_COM_CAN_FD_ENABLE > 0)
  tCanBitTimingConfig bittimingConfigBRS = { 0 };
#endif

  /* the current implementation supports CAN1. throw an assertion error in case a
   * different CAN channel is configured.
   */
  ASSERT_CT(BOOT_COM_CAN_CHANNEL_INDEX == 0);

  /* set the CAN controller channel, which is needed by HAL_FDCAN_MspInit(). */
  canHandle.Instance = CAN_CHANNEL;
  /* call HAL_FDCAN_MspInit() here already, even though this is done automatically later
   * on in the call to HAL_FDCAN_Init(). HAL_FDCAN_MspInit() configures the source clock,
   * which should be done first, otherwise the call to LL_RCC_GetFDCANClockFreq() to
   * obtain the FDCAN clock frequency returns an incorrect value. the FDCAN clock
   * frequency is needed to properly calculate the bittiming, which is turn needs to be
   * done before calling HAL_FDCAN_Init(). explicitly calling HAL_FDCAN_MspInit() here
   * one extra time works around this chicken and egg type problem. when CubeMX is not
   * used in a project and therefore HAL_FDCAN_MspInit() is not generated, it still works
   * because the weak HAL_FDCAN_MspInit() is then called.
   */
  HAL_FDCAN_MspInit(&canHandle);

#if (BOOT_COM_CAN_FD_ENABLE > 0)
  /* determine if the bitrate switch feature should be used. note that you cannot use
   * BOOT_COM_CAN_FD_BRS_BAUDRATE in a preprocessor compile-time check, because this
   * macro might be set to a function call, instead of just a baudrate value.
   */
  if (BOOT_COM_CAN_FD_BRS_BAUDRATE > 0)
  {
    canFdBitrateSwitchUsed = BLT_TRUE;
  }
  else
  {
    canFdBitrateSwitchUsed = BLT_FALSE;
  }

  /* calculate the data bittiming configuration with enabled bitrate switch feature. */
  if (canFdBitrateSwitchUsed == BLT_TRUE)
  {
    /* store CAN peripheral parameters related to the data bittiming configuration. */
    periphParams.base_freq = LL_RCC_GetFDCANClockFreq(LL_RCC_FDCAN_CLKSOURCE);
    periphParams.prescaler_min = 1U;
    periphParams.prescaler_max = 32U;
    periphParams.tseg1_min = 1U;
    periphParams.tseg1_max = 32U;
    periphParams.tseg2_min = 1U;
    periphParams.tseg2_max = 16U;
    /* attempt to find a matching data bittiming configuration. */
    if (CanCalculateBitTimingConfig(BOOT_COM_CAN_FD_BRS_BAUDRATE, &periphParams,
                                    &bittimingConfigBRS) == BLT_FALSE)
    {
      /* Incorrect configuration. The specified baudrate is not supported for the given
       * clock configuration. Verify the following settings in blt_conf.h:
       *   - BOOT_COM_CAN_FD_BRS_BAUDRATE
       *   - BOOT_CPU_XTAL_SPEED_KHZ
       *   - BOOT_CPU_SYSTEM_SPEED_KHZ
       */
      ASSERT_RT(BLT_FALSE);
    }
  }
#endif

  /* store CAN peripheral parameters related to the nominal bittiming configuration. */
  periphParams.base_freq = LL_RCC_GetFDCANClockFreq(LL_RCC_FDCAN_CLKSOURCE);
  periphParams.prescaler_min = 1U;
  periphParams.prescaler_max = 512U;
  periphParams.tseg1_min = 1U;
  periphParams.tseg1_max = 256U;
  periphParams.tseg2_min = 1U;
  periphParams.tseg2_max = 128U;
  /* attempt to find a matching nominal bittiming configuration. */
  if (CanCalculateBitTimingConfig(BOOT_COM_CAN_BAUDRATE, &periphParams,
                                  &bittimingConfig) == BLT_FALSE)
  {
    /* Incorrect configuration. The specified baudrate is not supported for the given
     * clock configuration. Verify the following settings in blt_conf.h:
     *   - BOOT_COM_CAN_BAUDRATE
     *   - BOOT_CPU_XTAL_SPEED_KHZ
     *   - BOOT_CPU_SYSTEM_SPEED_KHZ
     */
    ASSERT_RT(BLT_FALSE);
  }

  /* set the CAN controller configuration. */
  canHandle.Init.ClockDivider = FDCAN_CLOCK_DIV1;
  canHandle.Init.FrameFormat = FDCAN_FRAME_CLASSIC;
  canHandle.Init.Mode = FDCAN_MODE_NORMAL;
  canHandle.Init.AutoRetransmission = ENABLE;
  canHandle.Init.TransmitPause = ENABLE;
  canHandle.Init.ProtocolException = DISABLE;
  canHandle.Init.NominalPrescaler = bittimingConfig.prescaler;
  canHandle.Init.NominalTimeSeg1 = bittimingConfig.tseg1;
  canHandle.Init.NominalTimeSeg2 = bittimingConfig.tseg2;
  canHandle.Init.NominalSyncJumpWidth = bittimingConfig.sjw;
  canHandle.Init.DataPrescaler = 1;
  canHandle.Init.DataSyncJumpWidth = 1;
  canHandle.Init.DataTimeSeg1 = 1;
  canHandle.Init.DataTimeSeg2 = 1;
#if (BOOT_COM_CAN_FD_ENABLE > 0)
  if (canFdBitrateSwitchUsed == BLT_FALSE)
  {
    canHandle.Init.FrameFormat = FDCAN_FRAME_FD_NO_BRS;
  }
  else
  {
    canHandle.Init.FrameFormat = FDCAN_FRAME_FD_BRS;
    canHandle.Init.DataPrescaler = bittimingConfigBRS.prescaler;
    canHandle.Init.DataTimeSeg1 = bittimingConfigBRS.tseg1;
    canHandle.Init.DataTimeSeg2 = bittimingConfigBRS.tseg2;
    canHandle.Init.DataSyncJumpWidth = bittimingConfigBRS.sjw;
  }
#endif
  /* does the message to be received have a standard 11-bit CAN identifier? */
  if ((rxMsgId & 0x80000000) == 0)
  {
    canHandle.Init.StdFiltersNbr = 1;
    canHandle.Init.ExtFiltersNbr = 0;
  }
  else
  {
    canHandle.Init.StdFiltersNbr = 0;
    canHandle.Init.ExtFiltersNbr = 1;
  }
  canHandle.Init.TxFifoQueueMode = FDCAN_TX_FIFO_OPERATION;
  /* initialize the CAN controller. this only fails if the CAN controller hardware is
   * faulty. no need to evaluate the return value as there is nothing we can do about
   * a faulty CAN controller.
   */
  (void)HAL_FDCAN_Init(&canHandle);

  /* configure the reception filter. note that the implementation of this function
   * always returns HAL_OK as long as the CAN controller is initialized, so no need to
   * evaluate the return value.
   */
  if ((rxMsgId & 0x80000000) == 0)
  {
    filterConfig.IdType = FDCAN_STANDARD_ID;
  }
  else
  {
    filterConfig.IdType = FDCAN_EXTENDED_ID;
    /* negate the ID-type bit */
    rxMsgId &= ~0x80000000;
  }
  filterConfig.FilterIndex = 0;
  filterConfig.FilterType = FDCAN_FILTER_DUAL;
  filterConfig.FilterConfig = FDCAN_FILTER_TO_RXFIFO0;
  filterConfig.FilterID1 = rxMsgId;
  filterConfig.FilterID2 = rxMsgId;
  (void)HAL_FDCAN_ConfigFilter(&canHandle, &filterConfig);

  /* configure global filter to reject all non-matching frames. */
  HAL_FDCAN_ConfigGlobalFilter(&canHandle, FDCAN_REJECT, FDCAN_REJECT, 
                               FDCAN_REJECT_REMOTE, FDCAN_REJECT_REMOTE);
  
#if (BOOT_COM_CAN_FD_ENABLE > 0)
  if (canFdBitrateSwitchUsed == BLT_TRUE)
  {
    /* configure and enable the transmit delay compensation, which is required if the
     * bitrate switch feature is enabled. recommended settings:
     * - offset: DataTimeSeg1 * DataPrescaler
     * - filter: 0
     */
    (void)HAL_FDCAN_ConfigTxDelayCompensation(&canHandle, bittimingConfigBRS.tseg1 *
                                              bittimingConfigBRS.prescaler, 0U);
  }
#endif

  /* start the CAN peripheral. no need to evaluate the return value as there is nothing
   * we can do about a faulty CAN controller. */
  (void)HAL_FDCAN_Start(&canHandle);
}

void CanTransmitPacket(blt_int8u *data, blt_int8u len)
{
  blt_int32u             txMsgId = BOOT_COM_CAN_TX_MSG_ID;
  FDCAN_TxHeaderTypeDef  txMsgHeader;
  blt_int32u             timeout;
  HAL_StatusTypeDef      status;
  blt_int32u             txMsgBuffer;
#if (BOOT_COM_CAN_FD_ENABLE > 0)
  static const blt_int8u len2dlc[] = { 0,  1,  2,  3,  4,  5,  6,  7,  8,   /*  0 -  8 */
                                       9,  9,  9,  9,                       /*  9 - 12 */
                                       10, 10, 10, 10,                      /* 13 - 16 */
                                       11, 11, 11, 11,                      /* 17 - 20 */
                                       12, 12, 12, 12,                      /* 21 - 24 */
                                       13, 13, 13, 13, 13, 13, 13, 13,      /* 25 - 32 */
                                       14, 14, 14, 14, 14, 14, 14, 14,      /* 33 - 40 */
                                       14, 14, 14, 14, 14, 14, 14, 14,      /* 41 - 48 */
                                       15, 15, 15, 15, 15, 15, 15, 15,      /* 49 - 56 */
                                       15, 15, 15, 15, 15, 15, 15, 15 };    /* 57 - 64 */
#endif

  /* validate the specified length. */
  ASSERT_RT(len <= BOOT_COM_CAN_TX_MAX_DATA);

  /* configure the message that should be transmitted. */
  if ((txMsgId & 0x80000000) == 0)
  {
    /* set the 11-bit CAN identifier. */
    txMsgHeader.Identifier = txMsgId;
    txMsgHeader.IdType = FDCAN_STANDARD_ID;
  }
  else
  {
    /* negate the ID-type bit. */
    txMsgId &= ~0x80000000;
    /* set the 29-bit CAN identifier. */
    txMsgHeader.Identifier = txMsgId;
    txMsgHeader.IdType = FDCAN_EXTENDED_ID;
  }

  txMsgHeader.TxFrameType = FDCAN_DATA_FRAME;
  txMsgHeader.FDFormat = FDCAN_CLASSIC_CAN;
  txMsgHeader.ErrorStateIndicator = FDCAN_ESI_ACTIVE;
  txMsgHeader.TxEventFifoControl = FDCAN_NO_TX_EVENTS;
  txMsgHeader.MessageMarker = 0x52;
  txMsgHeader.BitRateSwitch = FDCAN_BRS_OFF;
  txMsgHeader.DataLength = len;
#if (BOOT_COM_CAN_FD_ENABLE > 0)
  txMsgHeader.FDFormat = FDCAN_FD_CAN;
  txMsgHeader.DataLength = len2dlc[len];
  if (canFdBitrateSwitchUsed == BLT_TRUE)
  {
    txMsgHeader.BitRateSwitch = FDCAN_BRS_ON;
  }
#endif

  /* add the message to the transmit FIFO to request its transmission. */
  status = HAL_FDCAN_AddMessageToTxFifoQ(&canHandle, &txMsgHeader, data);
  /* read out which FIFO buffer was used for the last transmit request. */
  txMsgBuffer = HAL_FDCAN_GetLatestTxFifoQRequestBuffer(&canHandle);

  /* only continue with polling for transmit completion if the message transmit request
   * could be submitted to a valid FIFO buffer.
   */
  if ((status == HAL_OK) && (txMsgBuffer != 0))
  {
    /* determine timeout time for the transmit completion. */
    timeout = TimerGet() + CAN_MSG_TX_TIMEOUT_MS;
    /* poll for completion of the transmit operation. */
    while (HAL_FDCAN_IsTxBufferMessagePending(&canHandle, txMsgBuffer) != 0)
    {
      /* service the watchdog. */
      CopService();
      /* break loop upon timeout. this would indicate a hardware failure or no other
       * nodes connected to the bus.
       */
      if (TimerGet() > timeout)
      {
        break;
      }
    }
  }
}

blt_bool CanReceivePacket(blt_int8u *data, blt_int8u *len)
{
  blt_bool               result = BLT_FALSE;
  blt_int32u             rxMsgId = BOOT_COM_CAN_RX_MSG_ID;
  FDCAN_RxHeaderTypeDef  rxMsgHeader;
  HAL_StatusTypeDef      rxStatus = HAL_ERROR;
#if (BOOT_COM_CAN_FD_ENABLE > 0)
  static const blt_int8u dlc2len[] = { 0,  1,  2,  3,  4,  5,  6,  7,
                                       8, 12, 16, 20, 24, 32, 48, 64 };
#endif

  /* check if the expected CAN message was received? */
  if (HAL_FDCAN_GetRxFifoFillLevel(&canHandle, FDCAN_RX_FIFO0) > 0)
  {
    /* attempt to read the newly received CAN message from its buffer. */
    rxStatus = HAL_FDCAN_GetRxMessage(&canHandle, FDCAN_RX_FIFO0, &rxMsgHeader, data);
  }

  /* only continue processing the CAN message if something was received. */
  if (rxStatus == HAL_OK)
  {
    /* check if this message has the configured CAN packet identifier. */
    if ((rxMsgId & 0x80000000) == 0)
    {
      /* was an 11-bit CAN message received that matches? */
      if ( (rxMsgHeader.Identifier == rxMsgId) &&
           (rxMsgHeader.IdType == FDCAN_STANDARD_ID) )
      {
        /* set flag that a packet with a matching CAN identifier was received. */
        result = BLT_TRUE;
      }
    }
    else
    {
      /* negate the ID-type bit. */
      rxMsgId &= ~0x80000000;
      /* was an 29-bit CAN message received that matches? */
      if ( (rxMsgHeader.Identifier == rxMsgId) &&
           (rxMsgHeader.IdType == FDCAN_EXTENDED_ID) )
      {
        /* set flag that a packet with a matching CAN identifier was received. */
        result = BLT_TRUE;
      }
    }
    /* store the data length. */
    if (result == BLT_TRUE)
    {
#if (BOOT_COM_CAN_FD_ENABLE > 0)
      *len = 0;
      if (rxMsgHeader.DataLength <= sizeof(dlc2len)/sizeof(dlc2len[0]))
      {
        *len = dlc2len[rxMsgHeader.DataLength];
      }
#else
      *len = (blt_int8u)(rxMsgHeader.DataLength);
#endif
      /* validate the received length. */
      ASSERT_RT(*len <= BOOT_COM_CAN_RX_MAX_DATA);
    }
  }

  /* give the result back to the caller. */
  return result;
}
